tests/diagnostics/catalog/snapshots/ir/IR0008.snap
error[IR0008]: IR_E_CONST_CYCLE
 --> tests/diagnostics/catalog/sources/ir/IR0008.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0008
  = help: keep IR validation diagnostics structured and catalog-backed
